# OpenSoT

./: .buildinfo  .gitignore  .travis.yml  .travis.yml.disabled  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt~  HCOD.html  OpenSoTConfig.cmake.in  README.md  aknowledge.html  coman_valve.py  conf.py  constraint.html  eHQP.html  genindex.html  iHQP.html  index.html  index.rst  initial_config.ini  intro.html  nHQP.html  objects.inv  package.xml  paramsTuner.py  search.html  searchindex.js  solver.html  solvers_comparison.html  stack.html  streamPlotter.py  task.html  test0.py  test1.py  test3.py  testCoM.py  testCoM2.py  testTorso.py  variables.html  version.h.in
app/: CMakeLists.txt  sot_velkincon.xml
app/applications/: sot_scope_monitor.xml  sot_velkincon_dump_monitor.xml  sot_velkincon_scope_command.xml  sot_velkincon_scope_monitor.xml
app/conf/: initial_config_simulation.ini  scope_monitor.xml  scope_torso_command.xml  sot_velkincon.ini
app/resources/: tuner.xml
app/scopes/: scope_arms_command.xml  scope_legs_command.xml  scope_monitor.xml
app/scripts/: dumpStream.xml  sot_dump_command.xml  sot_scope_command.xml  sot_velkincon.xml
bindings/python/: CMakeLists.txt  aggregated.hpp  autostack.hpp  basic.hpp  generic.hpp  pyopensot.cpp  pyopensot_collision.cpp  pyopensot_hcod.cpp  solver.hpp  solver_hcod.hpp  sub.hpp  variables.hpp
bindings/python/constraints/: acceleration.hpp  force.hpp  velocity.hpp  velocity_collision.hpp
bindings/python/examples/: LittleDog_id.py  LittleDog_id.rviz  panda_gdik.py  panda_ik.py  panda_ik.rviz
bindings/python/tasks/: acceleration.hpp  velocity.hpp
bindings/python/tests/: pyopensot_aggregated_tests.py  pyopensot_autostack_test.py  pyopensot_basics_tests.py  pyopensot_operators_tests.py  pyopensot_variables_tests.py
doc/: CMakeLists.txt  Doxyfile.in  main.dox  walkman_opensot.dox
examples/: CMakeLists.txt  example_autostack.cpp  example_cartesian.cpp  example_com.cpp  example_dummy_save_task_joint_ranges.cpp  example_imu_waist_down.cpp  example_minimum_effort.cpp  example_postural.cpp  example_previewer.cpp  example_python.cpp  example_python.py  example_python_SCAFoI.cpp  example_python_crouching.cpp  example_python_distance_query.cpp  example_python_simple_stabilizer.cpp  example_velocity_allocation.cpp  hcod_ik_plot.py  hqp_ik_plot.py  ihqp_ik_plot.py
examples/ForceAccExample/: CMakeLists.txt  README.md
examples/ForceAccExample/cmake/: FindXenomai.cmake  MacroYCMInstallLibrary.cmake
examples/ForceAccExample/src/: ForceAccExample_plugin.cpp
examples/KlamptController/: CMakeLists.txt  KlamptController.i  README.md  example_client.py  example_client_postural.py  example_client_trajectories.py  example_klampt_controller.cpp  example_klampt_controller.h  example_trajectories.py  klampt_huboplus_controller.py  main.cpp  main.py
examples/KlamptController/include/: KlamptController.h  utils.h
examples/KlamptController/src/: KlamptController.cpp
examples/KlamptController/tests/: testKlamptController.cpp
examples/cpp/: CMakeLists.txt  FloatingBaseEstimation.h  JointLimitsPSAP.cpp  JointLimitsPSAP.h  StaticWalkUtils.hpp  coman_ik.cpp  coman_ik_hcod.cpp  example1.cpp  example2.cpp  example3.cpp  joint_limits_psap.cpp  panda_ik.cpp  panda_ik_hcod.cpp  qp_estimation.cpp  qp_estimation.h  simple_qp.cpp  static_walk.cpp
examples/launch/: coman_ik.launch  coman_ik.rviz  example3.launch  example3.rviz  panda_ik.launch  panda_ik.rviz  static_walk.launch
examples/python/: example_python_crouching.py
tests/: CMakeLists.txt  CMakeLists.txt.orig  CTestCustom.cmake  DefaultHumanoidStack.cpp  DefaultHumanoidStack.h  LinkPairDistance.h  collision_utils.cpp  collision_utils.h  common.h  path_circle_fix.cpp  path_circle_fix.hpp  plot_test_results.m  plot_test_results.py  ros_trj_publisher.cpp  ros_trj_publisher.h  trajectory_utils.cpp  trajectory_utils.h  unitTest1.cpp  unitTest2.cpp
tests/SCAFoI/: SCAFoI.model.larm.lleg  SCAFoI.model.larm.rarm  SCAFoI.model.larm.rleg  SCAFoI.model.larm.torso  SCAFoI.model.rarm.lleg  SCAFoI.model.rarm.rleg  SCAFoI.model.rarm.torso  scale.larm.lleg  scale.larm.rarm  scale.larm.rleg  scale.larm.torso  scale.rarm.lleg  scale.rarm.rleg  scale.rarm.torso
tests/constraints/: TestAggregated.cpp  TestBilateralConstraint.cpp  TestSubConstraint.cpp
tests/constraints/acceleration/: TestJointLimits.cpp  TestJointLimits.cpp.autosave  TestJointLimitsECBF.cpp  TestJointLimitsPSAP.cpp  TestJointLimitsViability.cpp
tests/constraints/force/: TestFrictionCones.cpp
tests/constraints/velocity/: TestCartesianPositionConstraint.cpp  TestCoMVelocity.cpp  TestCollisionAvoidance.cpp  TestCollisionAvoidanceEnvironment.cpp  TestConvexHull.cpp  TestDynamics.cpp  TestJointLimits.cpp  TestJointLimitsInvariance.cpp  TestVelocityLimits.cpp
tests/floating_base/: testKinematicEstimation.cpp
tests/matlab/testDynamics/: testConstraintWithContacts_externalForces_plot.m  testDynamicsConstr_testConstraintTrj_plot.m  testDynamicsConstr_testConstraintWithContacts_plot.m  (+1 more)
tests/solvers/: TestBasicAlgebra.cpp  TestCBC.cpp  TestEigenSVD_StaticWalk_FloatingBase.cpp  TestGLPK.cpp  TestLP.cpp  TestOSQP.cpp  TestQPOases.cpp  TestQPOases_AutoStack.cpp  TestQPOases_CartesianPositionConstraint.cpp  TestQPOases_ConvexHull.cpp  TestQPOases_FF.cpp  TestQPOases_GlobalConstraints.cpp  TestQPOases_Options.cpp  TestQPOases_PriorityInversion.cpp  TestQPOases_SelfCollisionAvoidance.cpp  TestQPOases_SetActiveStack.cpp  TestQPOases_Sparse.cpp  TestQPOases_StaticWalk.cpp  TestQPOases_StaticWalk_FloatingBase.cpp  TestQPOases_SubTask.cpp  TestQPOases_VelocityAllocation.cpp  TestSOTH.cpp  TesteiQuadProg.cpp  TestiHQP.cpp  Testl1HQP.cpp  TestqpSWIFT.cpp  TestuQuadProg.cpp
tests/tasks/: TestAggregated.cpp  TestGenericTask.cpp  TestSubTask.cpp  TestTask.cpp
tests/utils/: TestAffineHelper.cpp  TestAffineUtils.cpp  TestAutoStack.cpp  TestDefaultHumanoidStack.cpp  TestInverseDynamics.cpp  TestKinematics.cpp  TestLogger.cpp  TestPiler.cpp  TestPreviewer.cpp  TestVelocityAllocation.cpp  cartesian_utils_test.cpp  collision_utils_test.cpp
(+1363 files in other folders)
